Trip List Trip Add Trip Modify Trip Delete Error translate pipe

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,3 +1,32 @@
 {
-
+  "general": {
+    "accept": "Accept",
+    "cancel": "Cancel",
+    "add-trip": "Add trip"
+  },
+  "edit-trip-dialog": {
+    "dialog-edit-title": "Edit trip",
+    "dialog-add-title": "Add trip",
+    "place": "Place",
+    "description": "Description",
+    "lat": "Latitude",
+    "lon": "Longitude",
+    "image": "Image URL",
+    "image-preview": "Image preview"
+  },
+  "table": {
+    "search": "Place name",
+    "search-tootltip": "Search place name",
+    "city": "Place",
+    "creation-date": "Creation date",
+    "last-update-date": "Last update date"
+  },
+  "error": {
+    "input": {
+      "required": "Mandatory value",
+      "only-letters-validator": "Only letters are accepted",
+      "lon-validator": "Value must be between -90 and 90",
+      "lat-validator": "Value must be between -180 and 80"
+    }
+  }
 }
