--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,6 +6,7 @@
     "back": "Volver"
   },
   "travel-random-header": "Don't you know which country to travel to?",
+  "travel-history": "Travel History",
   "travel": "Travel",
   "edit-trip-dialog": {
     "dialog-edit-title": "Edit trip",
