--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,7 +3,7 @@
     "accept": "Accept",
     "cancel": "Cancel",
     "add-trip": "Add trip",
-    "back": "Volver"
+    "back": "Back"
   },
   "travel-random-header": "Don't you know which country to travel to?",
   "travel-history": "Travel History",
